--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/config": "^3.3.0",
+    "apify-client": "^2.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
