--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/config": "^3.3.0",
+    "@supabase/supabase-js": "^2.95.3",
     "apify-client": "^2.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
