feat: Implement Apify integration for competitor discovery, webhook processing, and saving results to Supabase.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SUPABASE_URL="https://ituecleocjmzyowwnqrm.supabase.co"
 SUPABASE_KEY="your_anon_key"
 APIFY_TOKEN=""
+APIFY_WEBHOOK_URL="https://YOUR_NGROK_URL.ngrok-free.app/webhooks/apify/competitors"
